@@ -418,13 +418,14 @@ void flash_do_write_internal (const uint8_t *p, int nr,
 
 extern const uint8_t gnuk_string_serial[];
 
-#define LED_ONESHOT		 1
-#define LED_TWOSHOTS		 2
-#define LED_SHOW_STATUS		 4
-#define LED_START_COMMAND	 8
-#define LED_FINISH_COMMAND	16
-#define LED_FATAL		32
-#define LED_USB_RESET		64
+#define LED_ONESHOT		  1
+#define LED_TWOSHOTS		  2
+#define LED_SHOW_STATUS		  4
+#define LED_START_COMMAND	  8
+#define LED_FINISH_COMMAND	 16
+#define LED_FATAL		 32
+#define LED_USB_RESET		 64
+#define LED_GNUK_EXEC		128
 void led_blink (int spec);
 
 #if defined(PINPAD_SUPPORT)
